--- a/concu.bib
+++ b/concu.bib
@@ -2934,6 +2934,13 @@ pages="16-36",
 year = "2014"}
 
 
+@article{agl16,
+author="P. R. D'Argenio and D. Gebler and M. D. Lee",
+title="A general {SOS} theory for the specification of probabilistic transition systems",
+journal="Information and Computation",
+volume="249",
+pages="76-109",
+year = "2016"}
 %
 %
 %
