--- a/introduction.tex
+++ b/introduction.tex
@@ -11,16 +11,16 @@
 %constraints. For instance, some of these approaches are FODA~\cite{kchnp90},
 %RSEB~\cite{mj98} and PLUSS~\cite{k05,ebb06}.
 
-During the last years, software product lines (in short, \SPLs) have become a widely adopted mechanism for efficient software development. Carnegie Mellon Software Engineering Institute defines a \SPL\ as ``a set of software-intensive systems that share a common, managed set of features satisfying the specific needs of a particular market segment or mission and that are developed from a common set of core assets in a prescribed way''. Basically, the main goal of \SPLs\ is to increase the productivity for creating software products, which is achieved by selecting those software systems that are better for a specific criterion (e.g. a software system is less expensive than others, it requires less time to be processed, etc.). Currently, different approaches for representing the product line organization can be found in the literature, such as FODA~\cite{kchnp90},
+During the last years, software product lines (in short, \SPLs) have become a widely adopted mechanism for efficient software development. The Carnegie Mellon Software Engineering Institute defines an \SPL\ as ``a set of software-intensive systems that share a common, managed set of features satisfying the specific needs of a particular market segment or mission and that are developed from a common set of core assets in a prescribed way.'' Basically, the main goal of \SPLs\ is to increase the productivity for creating software products, which is achieved by selecting those software systems that are better for a specific criterion (e.g. a software system is less expensive than others, it requires less time to be processed, etc). Currently, different approaches for representing the product line organization can be found in the literature, such as FODA~\cite{kchnp90},
 RSEB~\cite{mj98} and PLUSS~\cite{k05,ebb06}.
 
-Graphical approaches are commonly used to model \SPLs. Feature Oriented Domain Analysis~\cite{kchnp90} (in short, \FODA) is a well-known graphical approach for representing commonality and variability of systems. Fig.~\ref{fig:foda:relations} shows all \FODA\ relationships and constraints.
+Graphical approaches are commonly used to model \SPLs. Feature Oriented Domain Analysis~\cite{kchnp90} (in short, \FODA) is a well-known graphical approach for representing commonality and variability of systems. Figure~\ref{fig:foda:relations} shows all \FODA\ relationships and constraints.
 % and Figure~\ref{section:introduction:figure:examples}
 % shows some examples of how
 % \FODA\ diagrams are built.
-Although this kind of solutions is useful to easily model \SPLs, a formal approach is needed for automatizing the analysis process and detecting errors in the early stages of the production process. It is therefore required that graphical representations are translated into mathematical entities~\cite{nak10}. In this case, the original graphical representation of \FODA\ must be provided with formal semantics base~\cite{bhst04}.
+Although this kind of solutions is useful to easily model \SPLs, a formal approach is needed for automatizing the analysis process and detecting errors in the early stages of the production process. It is therefore required that graphical representations are translated into mathematical entities~\cite{nak10}. In this case, the original graphical representation of \FODA\ must be provided with a formal semantics~\cite{bhst04}.
 %
-This  issue is solved by using \fodaPA~\cite{acl13}, a formal framework to represent \FODA\ diagrams using process algebras. \fodaPA\ can be applied not only to \FODA, but also to represent other feature-related problems and variability models. Additionally, some of the existing formal approaches use algebras and semantics~\cite{szw05,kkm06,prb11,acl13}, while others use propositional or first order logic~\cite{man02,ka07,abgf10,atfg10,nnz14}.
+This  issue is solved by using \fodaPA~\cite{acl13}, a formal framework to represent \FODA\ diagrams using process algebras. \fodaPA\ can be applied not only to \FODA, but also to represent other feature-related problems and variability models. Additionally, some of the existing formal approaches use algebras and semantics~\cite{szw05,kkm06,prb11,acl13}, while others use either propositional or first order logic~\cite{man02,ka07,abgf10,atfg10,nnz14}.
 
 \begin{figure}[t]
 
@@ -248,12 +248,31 @@ This  issue is solved by using \fodaPA~\cite{acl13}, a formal framework to repre
 %minimum cost unit, and therefore, any cost can be represented as a multiple of this unit.
 
 It is worth to mention that the order in which features are processed to create a specific product is directly reflected in its final cost. In a previous work we introduced costs in our formal framework for representing the required effort to include a feature to the product under construction~\cite{cln16}. This cost may represent different aspects of a feature, such us lines of code of a given software component or effort, in human hours, to include a software component into a project, just to name a few, that usually depends on the target of the product line organization. Thus, efficiently processing features for building high quality products becomes a time-consuming and challenging task. Unfortunately, there are some situations where the representation of the \SPL\ generates a combinatorial explosion, making unpractical to analyze all possible combinations.
-
-\acomen{Aquí introduzco probabilidades. Manuel, tu magia aquí! :)}
-
+%
 In order to alleviate this issue, we propose a probabilistic extension of our previous work \fodaPA. We use probabilistic information to identify those features that are more frequently used by computing the probability of having a feature in a specific \SPL. Hence, the computation is focused on those features with a high probability to be present in the final product, reducing the total computation required for generating valid products.
 
-Formal methods and process algebras have evolved to extend their relations to support probabilistic models~\cite{pp01,l19911}. Figures like the displayed trees describe how probabilities are assigned in the system behavior (see Fig.~\ref{fig:displayedTrees}). These models allow to assign a real value between 0 and 1 to each transition in order to execute an event. It is important to notice that the probability of execute a transition \textit{t} is not necessarily equal to the other probabilities from the same level.
+
+
+
+The study of probabilistic extensions of formal methods can be dated back to the end of the 1980s. This is already a well established area, with many contributions extending classical formalisms (Process Algebras, I/O Automata, Finite State Machines, Input Output Transition Systems, among others) to include probabilistic information~\cite{ls91,rgs95,cdsy99,nun03,lnr06,csv07,dghm08,hm09,hn10,dghm14,gs16}.
+%
+%
+
+
+
+
+
+
+
+
+
+
+
+The inclusion of 
+\acomen{Aquí introduzco probabilidades. Manuel, tu magia aquí! :)}
+
+
+Formal methods and process algebras have evolved to extend their relations to support probabilistic models~\cite{pp01,l19911}. Figures like the displayed trees describe how probabilities are assigned in the system behavior (see Figure~\ref{fig:displayedTrees}). These models allow to assign a real value between 0 and 1 to each transition in order to execute an event. It is important to notice that the probability of execute a transition \textit{t} is not necessarily equal to the other probabilities from the same level.
 \begin{figure}[h]
 	\hspace{50px}
 	\begin{minipage}{0.4\hsize}       		
