--- a/introduction.tex
+++ b/introduction.tex
@@ -257,7 +257,7 @@ In order to alleviate this issue, we propose a probabilistic extension of our pr
 The study of probabilistic extensions of formal methods can be dated back to the end of the 1980s. This is already a well established area, with many long contributions extending classical formalisms (Process Algebras, I/O Automata, Finite State Machines, Input Output Transition Systems, among others) to include probabilistic information~\cite{ls91,rgs95,cdsy99,nun03,lnr06,csv07,dghm08,hm09,hn10,dghm14,agl16}.
 %
 %
-\mncomment{He comentado la figura y la explicación porque este modelo no se parece en nada al que genera la semántica operacional: en nuestro caso, las transiciones tienen accion y probabilidad.}
+\mncomment{He comentado la figura y la explicacion porque este modelo no se parece en nada al que genera la semantica operacional: en nuestro caso, las transiciones tienen accion y probabilidad.}
 %Figures like the displayed trees describe how probabilities are assigned in the system behavior (see Figure~\ref{fig:displayedTrees}). These models allow to assign a real value between 0 and 1 to each transition in order to execute an event. It is important to notice that the probability of execute a transition \textit{t} is not necessarily equal to the other probabilities from the same level.
 %\begin{figure}[h]
 %	\hspace{50px}
