--- a/introduction.tex
+++ b/introduction.tex
@@ -313,8 +313,8 @@ The study of probabilistic extensions of formal methods can be dated back to the
 %
 %\acomen{He puesto título y referencia a esta figura (Fig. 2). Please, check!}
 %
-\acomen{Carlos, he cambiado el siguiente texto con referencias a papers de probabilidades. Please, check para ver que no digo nada cantoso)}
-%
+%\acomen{Carlos, he cambiado el siguiente texto con referencias a papers de probabilidades. Please, check para ver que no digo nada cantoso)}
+%%
 Although the addition of probabilistic information to model \SPLs\ is relatively new, there are already several proposals in the literature~\cite{chssgl13,tllv15,tlll15,dpcslsh17}. In particular, this previous work shows that statistic analysis allows users to determine relevant characteristics, like the certainty of finding valid products among complex models~\cite{dpcslsh17}.
 %
 Another approach~\cite{chssgl13} focus on testing properties of \SPLs, like reliability, by defining three verification techniques: a probabilistic model checker on each product, on a model range, and testing the behavior relations with other models.
