--- a/concu.bib
+++ b/concu.bib
@@ -2896,6 +2896,15 @@ booktitle="9th Workshop on Quantitative Aspects of Programming Languages, QAPL'1
 year="2011"}
 
 
+@article{sok11,
+author="A. Sokolova",
+title="Probabilistic systems coalgebraically: A survey",
+journal="Theoretical Computer Science",
+volume="412",
+number="38",
+pages="5095-5110",
+year = "2011"}
+
 @article{dt12,
 author = "Y. Deng and A. Tiu",
 title = "Characterisations of testing preorders for a finite probabilistic $\pi$-calculus",
