--- a/introduction.tex
+++ b/introduction.tex
@@ -254,7 +254,7 @@ In order to alleviate this issue, we propose a probabilistic extension of our pr
 
 
 
-The study of probabilistic extensions of formal methods can be dated back to the end of the 1980s. This is already a well established area, with many long contributions extending classical formalisms (Process Algebras, I/O Automata, Finite State Machines, Input Output Transition Systems, among others) to include probabilistic information~\cite{ls91,rgs95,cdsy99,nun03,lnr06,csv07,dghm08,hm09,hn10,dghm14,agl16}.
+The study of probabilistic extensions of formal methods can be dated back to the end of the 1980s. This is already a well established area, with many extensive contributions to include probabilistic information in classical formalisms (I/O Automata, Finite State Machines, (co-)algebraic approaches, among others)~\cite{ls91,rgs95,cdsy99,nun03,lnr06,csv07,dghm08,hm09,sok11,hn12,dghm14,agl16}.
 %
 %
 \mncomment{He comentado la figura y la explicacion porque este modelo no se parece en nada al que genera la semantica operacional: en nuestro caso, las transiciones tienen accion y probabilidad.}
