--- a/concu.bib
+++ b/concu.bib
@@ -2827,6 +2827,27 @@ year ="2006",
 pages = "83-108"
 }
 
+@article{dp07,
+author = "Y. Deng and C. Palamidessi",
+title = "Axiomatizations for probabilistic finite-state behaviors",
+journal = "Theoretical Computer Science",
+volume ="373",
+number ="1-2",
+year ="2007",
+pages = "92-114"
+}
+
+@article{aprs11,
+author = "M. E. Andr{\'e}s and C. Palamidessi and Peter {van} Rossum and A. Sokolova",
+title = "Information hiding in probabilistic concurrent systems",
+journal = "Theoretical Computer Science",
+volume ="412",
+number ="28",
+year ="2011",
+pages = "3072-3089"
+}
+
+
 @inproceedings{dghmz07,
 author="Y. Deng and R. {van} Glabbeek and M. Hennessy and C. Morgan and C. Zhang",
 title="Characterising Testing Preorders for Finite Probabilistic Processes",
