--- a/equivalence.tex
+++ b/equivalence.tex
@@ -8,7 +8,7 @@ better in any moment. The proof of the following result is an immediate conseque
 \bprop\label{prop:DenoOpe}
 %\label{prop:pref}
   Let $P,Q\in\fodaPAp$ be terms, $\feature{A},\feature{B}\in\calF$ be features and $q\in (0,1)$, be a probability. We have the following results:
-  $$\begin{array}{lll}
+  $$\begin{array}{rll}
   \prodp(\feature{A};P)&=&\semdenp{\feature{A};\cdot}(\prodp(P))\\
   \prodp(\ofeature{A};_qP)&=&\semdenp{\ofeature{A};_q\cdot}(\prodp(P))\\
   \prodp(P\choice_q Q)&=&\semdenp{\cdot\choice_q\cdot}\bigl(\prodp(P),\prodp(Q)\bigr)\\
