--- a/hiding.tex
+++ b/hiding.tex
@@ -119,7 +119,7 @@ hide actions that appear in the restriction operators. The proof of the followin
   \multicolumn{3}{l}{\mathrm{If\ } \fA,\fB\not\in\calA \mathrm{\ then\ }
     \semdenp{(\exclude{B}{P})\hide\calA}=\semdenp{\exclude{A}{B}{(P\hide\calA)}}}
   \end{array}$$
-\mncomment{Luis, faltan casos: que ocurre si $A$ y/o B$ pertenecen al conjunto ocultado??}
+\mncomment{Luis, faltan casos: que ocurre si $A$ y/o $B$ pertenecen al conjunto ocultado??}
 %  \begin{proof}
 %    In order to prove this properties it is enough to apply
 %    Proposition~\ref{prop:hid}.
