--- a/hiding.tex
+++ b/hiding.tex
@@ -100,22 +100,22 @@ hide actions that appear in the restriction operators. The proof of the followin
   Let $P,Q\in\fodaPAp$ be terms, $r\in (0,1]$ be a probability, and
   $\calA\subseteq\calF$ be a set of hidden actions. We have the following results:
   $$\begin{array}{rll} 
-  \semdenp{\checkmark\hide\calA}&=&\semdenp{\checkmark}\\
-  \semdenp{\nil\hide\calA}&=&\semdenp{\nil}\\
+  \semdenp{\checkmark\hide\calA}&=&\semdenp{\checkmark}\\[0.5em]
+  \semdenp{\nil\hide\calA}&=&\semdenp{\nil}\\[0.5em]
   \semdenp{(\fA;P)\hide\calA}&=&
       \begin{cases}
         \semdenp{\bot;(P\hide\calA)} & \mbox{si } A\in\calA\\
         \semdenp{\fA;(P\hide\calA)} & \mbox{si } A\not\in\calA\\
-      \end{cases}\\
+      \end{cases}\\[0.5em]
   \semdenp{(\ofA;_rP)\hide\calA}&=&
       \begin{cases}
         \semdenp{\overline{\bot};_r(P\hide\calA)} & \mbox{si } A\in\calA\\
         \semdenp{\ofA;_r(P\hide\calA)} & \mbox{si } A\not\in\calA\\
-      \end{cases}\\
-  \semdenp{(P\choice_P Q)\hide\calA}&=&\semdenp{(P\hide\calA)\choice_P (Q\hide\calA)}\\
-  \semdenp{(P\paral Q)\hide\calA}&=&\semdenp{(P\hide\calA)\paral (Q\hide\calA)}\\
+      \end{cases}\\[0.5em]
+  \semdenp{(P\choice_P Q)\hide\calA}&=&\semdenp{(P\hide\calA)\choice_P (Q\hide\calA)}\\[0.5em]
+  \semdenp{(P\paral Q)\hide\calA}&=&\semdenp{(P\hide\calA)\paral (Q\hide\calA)}\\[0.5em]
   \mathrm{If\ } \fA,\fB\not\in\calA \mathrm{\ then\ }
-    \semdenp{(\require{A}{B}{P})\hide\calA}&=&\semdenp{\require{A}{B}{(P\hide\calA)}}\\
+    \semdenp{(\require{A}{B}{P})\hide\calA}&=&\semdenp{\require{A}{B}{(P\hide\calA)}}\\[0.5em]
   \mathrm{If\ } \fA,\fB\not\in\calA \mathrm{\ then\ }
     \semdenp{(\exclude{B}{P})\hide\calA}&=&\semdenp{\exclude{A}{B}{(P\hide\calA)}}
   \end{array}$$
