--- a/concuPL.bib
+++ b/concuPL.bib
@@ -850,7 +850,7 @@ language={English}
 
 @inproceedings{fg08d,
 	Author = {A. Fantechi and S. Gnesi},
-	Booktitle = {12th International Software Product Line Conference, SPLC'08},
+	Booktitle = {12th Int. Software Product Lines Conference, SPLC'08},
 	Doi = {10.1109/SPLC.2008.45},
 	Pages = {193--202},
 	Publisher = {\ieee},
@@ -913,7 +913,7 @@ language={English}
 
 @inproceedings{abfgm11,
 	Author = {P. Asirelli and ter Beek, M. H. and A. Fantechi and S. Gnesi and F. Mazzanti},
-	Booktitle = {2nd International Workshop on Product Line Approaches in Software Engineering, PLEASE '11},
+	Booktitle = {2nd Int. Workshop on Product Line Approaches in Software Engineering, PLEASE'11},
 	Doi = {10.1145/1985484.1985492},
 	Pages = {25--30},
 	Publisher = {ACM},
@@ -931,7 +931,7 @@ language={English}
 
 @inproceedings{atfg10,
 	Author = {P. Asirelli and ter Beek, M. H. and A. Fantechi and S. Gnesi},
-	Booktitle = {8th International Conference on Integrated Formal Methods, IFM'10},
+	Booktitle = {8th Int. Conf. on Integrated Formal Methods, IFM'10},
 	Doi = {10.1007/978-3-642-16265-7_5},
 	Pages = {43--58},
 	Publisher = {\springer},
@@ -940,7 +940,7 @@ language={English}
 
 @inproceedings{atgf11,
 	Author = {P. Asirelli and ter Beek, M. H. and S. Gnesi and A. Fantechi},
-	Booktitle = {15th International Software Product Line Conference, SPLC '11},
+	Booktitle = {15th Int. Software Product Lines Conference, SPLC'11},
 	Doi = {10.1109/SPLC.2011.34},
 	Pages = {130--139},
 	Publisher = {\ieee},
@@ -1424,7 +1424,7 @@ author = {R.J. Vanglabbeek and S.A. Smolka and B. Steffen},
 }
 
 @inproceedings{tlll15,
-	author = {ter Beek, M. H. and Legay, A. and Lafuente, A. Lluch and Vandin, A.},
+	author = {ter Beek, M. H. and Legay, A. and Lluch-Lafuente, A.  and Vandin, A.},
 	title = {Statistical Analysis of Probabilistic Models of Software Product Lines with Quantitative Constraints},
 	booktitle = {Proceedings of the 19th International Conference on Software Product Line},
 	series = {SPLC '15},
@@ -1435,12 +1435,11 @@ author = {R.J. Vanglabbeek and S.A. Smolka and B. Steffen},
 	numpages = {5},
 	doi = {10.1145/2791060.2791087},
 	acmid = {2791087},
-	publisher = {ACM},
-	address = {New York, NY, USA},
-} 
+	publisher = {ACM}
+}
 
 @Inproceedings{tllv15,
-	author    = {ter Beek, Maurice H. and Legay, Axel and Lluch Lafuente, Alberto and Vandin, Andrea},
+	author    = {ter Beek, Maurice H. and Legay, Axel and Lluch-Lafuente, Alberto and Vandin, Andrea},
 	year      = {2015},
 	title     = {Quantitative Analysis of Probabilistic Models of Software Product Lines with Statistical Model Checking},
 	editor    = {Atlee, Joanne M. and Gnesi, Stefania},
@@ -1496,7 +1495,3 @@ issn = "0890-5401",
 doi = "http://dx.doi.org/10.1006/inco.1995.1135",
 author = "J.C.M. Baeten and J.A. Bergstra and S.A. Smolka",
 }
-
-
-
-
