--- a/concuPL.bib
+++ b/concuPL.bib
@@ -841,7 +841,7 @@ language={English}
 	Year = {2001}}
 
 @inproceedings{abgf10,
-	Author = {P. Asirelli and {ter} Beek, M. H. and S. Gnesi and A. Fantechi},
+	Author = {P. Asirelli and ter Beek, M. H. and S. Gnesi and A. Fantechi},
 	Booktitle = {4th International Workshop on Variability Modelling of Software-Intensive Systems, VaMoS'10},
 	Pages = {37-44},
 	Title = {A Deontic Logical Framework for Modelling Product Families},
@@ -912,7 +912,7 @@ language={English}
 	}
 
 @inproceedings{abfgm11,
-	Author = {P. Asirelli and {ter} Beek, M. H. and A. Fantechi and S. Gnesi and F. Mazzanti},
+	Author = {P. Asirelli and ter Beek, M. H. and A. Fantechi and S. Gnesi and F. Mazzanti},
 	Booktitle = {2nd Int. Workshop on Product Line Approaches in Software Engineering, PLEASE'11},
 	Doi = {10.1145/1985484.1985492},
 	Pages = {25--30},
@@ -930,7 +930,7 @@ language={English}
 	Year = {2008}}
 
 @inproceedings{atfg10,
-	Author = {P. Asirelli and  {ter} Beek, M. H. and A. Fantechi and S. Gnesi},
+	Author = {P. Asirelli and  ter Beek, M. H. and A. Fantechi and S. Gnesi},
 	Booktitle = {8th Int. Conf. on Integrated Formal Methods, IFM'10},
 	Doi = {10.1007/978-3-642-16265-7_5},
 	Pages = {43--58},
@@ -939,7 +939,7 @@ language={English}
 	Year = {2010}}
 
 @inproceedings{atgf11,
-	Author = {P. Asirelli and {ter} Beek, M. H. and S. Gnesi and A. Fantechi},
+	Author = {P. Asirelli and ter Beek, M. H. and S. Gnesi and A. Fantechi},
 	Booktitle = {15th Int. Software Product Lines Conference, SPLC'11},
 	Doi = {10.1109/SPLC.2011.34},
 	Pages = {130--139},
@@ -1424,7 +1424,7 @@ author = {R.J. Vanglabbeek and S.A. Smolka and B. Steffen},
 }
 
 @inproceedings{tlll15,
-	author = {{ter} Beek, M. H. and Legay, A. and Lluch-Lafuente, A.  and Vandin, A.},
+	author = {ter Beek, M. H. and Legay, A. and Lluch-Lafuente, A.  and Vandin, A.},
 	title = {Statistical Analysis of Probabilistic Models of Software Product Lines with Quantitative Constraints},
 	booktitle = {Proceedings of the 19th International Conference on Software Product Line},
 	series = {SPLC '15},
@@ -1438,7 +1438,7 @@ author = {R.J. Vanglabbeek and S.A. Smolka and B. Steffen},
 }
 
 @Inproceedings{tllv15,
-	author    = {{ter} Beek, Maurice H. and Legay, Axel and Lluch-Lafuente, Alberto and Vandin, Andrea},
+	author    = {ter Beek, Maurice H. and Legay, Axel and Lluch-Lafuente, Alberto and Vandin, Andrea},
 	year      = {2015},
 	title     = {Quantitative Analysis of Probabilistic Models of Software Product Lines with Statistical Model Checking},
 	editor    = {Atlee, Joanne M. and Gnesi, Stefania},
